--- a/hw3_sd3731.Rmd
+++ b/hw3_sd3731.Rmd
@@ -20,3 +20,8 @@ knitr::opts_chunk$set(
 library(tidyverse)
 library(p8105.datasets)
 ```
+# Problem 1
+
+```{r loading dataset}
+data("instacart")
+```
