--- a/hw3_sd3731.Rmd
+++ b/hw3_sd3731.Rmd
@@ -20,8 +20,47 @@ knitr::opts_chunk$set(
 library(tidyverse)
 library(p8105.datasets)
 ```
+
 # Problem 1
 
 ```{r loading dataset}
 data("instacart")
 ```
+## Data Description
+
+The dataset called `instacart` comprises a total of `r nrow(instacart)` data points across `r ncol(instacart)` different attributes. 
+
+The dataset consists of rows representing individual products in Instacart orders. It includes variables with details like product ID, name, order date, and a flag indicating if the product was reordered by the user. Additionally, the dataset contains user IDs and order IDs. Furthermore, it provides information about the product's aisle (e.g., yogurt) and department (e.g., dairy eggs).
+
+Key variables:  
+
+  - `order_id`: order identifier
+
+  - `product_id`: product identifier
+
+  - `add_to_cart_order`: order in which each product was added to cart 
+
+  - `reordered`: 1 = this prodcut has been ordered by this user in the past, 0 = otherwise
+
+  - `user_id`: customer identifier
+
+  - `eval_set`: which evaluation set this order belongs in (Note that the data for use in this class is exclusively from the “train” eval_set)
+
+  - `order_number`: the order sequence number for this user (1=first, n=nth)
+
+  - `order_dow`: the day of the week on which the order was placed
+
+  - `order_hour_of_day`: the hour of the day on which the order was placed
+
+  - `days_since_prior_order`: days since the last order, capped at 30, NA if order_number=1
+    
+  - `product_name`: name of the product
+
+  - `aisle_id`: aisle identifier
+
+  - `department_id`: department identifier
+
+  - `aisle`: the name of the aisle
+
+  - `department`: the name of the department
+  
