--- a/hw3_sd3731.Rmd
+++ b/hw3_sd3731.Rmd
@@ -64,3 +64,79 @@ Key variables:
 
   - `department`: the name of the department
   
+## Answers
+
+1.  How many aisles are there, and which aisles are the most items ordered from?
+
+```{r}
+instacart |> 
+  group_by(aisle) |> 
+  summarize(n_obs = n()) |> 
+  arrange(desc(n_obs))
+```
+
+  There are `r length(unique(pull(instacart, aisle_id)))` aisles in total. 
+  The aisle with id `r instacart |> group_by(aisle_id) |> summarize(n_orders = n()) |> mutate(max_order = max(n_orders)) |> filter(n_orders == max_order) |> pull(aisle_id)` are the aisle with most order items.
+  
+  To sum up, out of the 134 available aisles, the aisle containing fresh vegetables is the one from which the most items are ordered.
+
+2. Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered. Arrange aisles sensibly, and organize your plot so others can read it.
+
+```{r}
+instacart |> 
+  group_by(aisle) |> 
+  summarize(n_obs = n()) |> 
+  filter(n_obs > 10000) |> 
+  mutate(aisle = fct_reorder(aisle, n_obs)) |> 
+  ggplot(aes(x = aisle, y = n_obs)) +
+  geom_point() +
+  labs(y = "count", title = "Number of products ordered in aisle") +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+```
+
+Conclusion:
+There are `r nrow(slice1)` aisles where more than 10,000 items have been ordered.
+Among them, 2 aisles have witnessed orders of over 120,000 items.
+For 3 aisles, the number of ordered items falls within the range of 40,000 to 80,000.
+The remaining aisles have fewer than 40,000 ordered items.
+
+3. Make a table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.
+
+```{r}
+instacart |> 
+  filter(
+    aisle == "baking ingredients" |
+    aisle == "dog food care" | 
+    aisle == "packaged vegetables fruits") |> 
+  group_by(aisle, product_name) |> 
+  summarize(n_order = n()) |> 
+  mutate(
+    n_order_rank = min_rank(desc(n_order))) |> 
+  arrange(desc(n_order)) |> 
+  filter(n_order_rank <= 3) |> 
+  knitr::kable()
+```
+
+Conclusion:
+ The three most popular items in the `baking ingredients` aisle are identified by the IDs 23537, 23405, and 49533. 
+ In the `dog food care` aisle, the top three popular items are labeled with IDs 722, 23329, and 17471. 
+ As for the `packaged vegetables fruits` aisle, the top three popular items are represented by IDs 21903, 27966, and 39275.
+
+4. Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+
+```{r}
+instacart |> 
+  filter(
+    product_name == "Pink Lady Apples"|
+    product_name == "Coffee Ice Cream") |> 
+  group_by(product_name, order_dow) |> 
+  summarize(mean_hour = mean(order_hour_of_day)) |> 
+  pivot_wider(
+    names_from = product_name,
+    values_from = mean_hour) |> 
+  knitr::kable(digits = 2)
+
+```
+
+Conclusion:
+The typical time for ordering Coffee Ice Cream falls between 12 and 16 during the week, while the typical ordering hours for Pink Lady Apples are from 11 to 15.
