--- a/hw3_sd3731.Rmd
+++ b/hw3_sd3731.Rmd
@@ -140,3 +140,27 @@ instacart |>
 
 Conclusion:
 The typical time for ordering Coffee Ice Cream falls between 12 and 16 during the week, while the typical ordering hours for Pink Lady Apples are from 11 to 15.
+
+# Problem 2
+
+## Load and clean the dataset.
+
+```{r}
+data("brfss_smart2010")
+
+brfss <-
+  brfss_smart2010 |> 
+  janitor::clean_names() |> 
+  rename(state = locationabbr,
+         county = locationdesc) |> 
+  filter(topic == "Overall Health"& 
+           response %in% c("Excellent", "Very good", "Good", "Fair", "Poor"))|> 
+  mutate(
+    response = 
+      factor(response, 
+             levels = c("Poor", "Fair", "Good", "Very good", "Excellent")),
+    county = substring(county, 6))
+
+```
+
+The provided code loads and processes the "brfss_smart2010" dataset. The resulting cleaned dataset, named "brfss," includes `r nrow(brfss)` data points and `r ncol(brfss)` attributes, specifically centered on the subject of "Overall Health," encompassing responses ranging from "Poor" to "Excellent."
