--- a/hw3_sd3731.Rmd
+++ b/hw3_sd3731.Rmd
@@ -164,3 +164,67 @@ brfss <-
 ```
 
 The provided code loads and processes the "brfss_smart2010" dataset. The resulting cleaned dataset, named "brfss," includes `r nrow(brfss)` data points and `r ncol(brfss)` attributes, specifically centered on the subject of "Overall Health," encompassing responses ranging from "Poor" to "Excellent."
+
+## Answers
+
+1. In 2002, which states were observed at 7 or more locations? What about in 2010?
+
+```{r}
+brfss |> 
+  filter(year == 2002) |> 
+  group_by(state) |> 
+  summarize(
+    n_states = 
+      n_distinct(county)) |> 
+  filter(n_states >= 7) |> 
+  knitr::kable()
+```
+
+In 2002, 6 states (CT, FL, MA, NC, NJ, and PA states) in table above were observed at 7 or more locations.
+
+```{r}
+brfss |> 
+  filter(year == 2010) |> 
+  group_by(state) |> 
+  summarize(
+    n_states = 
+      n_distinct(county)) |> 
+  filter(n_states >= 7) |> 
+  knitr::kable()
+```
+
+ In 2010, 14 states (CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, and WA) in table above were observed at 7 or more locations.
+
+2. Construct a dataset that is limited to `Excellent` responses, and contains, year, state, and a variable that averages the `data_value` across locations within a state. 
+
+Make a “spaghetti” plot of this average value over time within a state (that is, make a plot showing a line for each state across years – the `geom_line` geometry and `group` aesthetic will help).
+
+```{r}
+brfss |> 
+  filter(response == "Excellent") |> 
+  group_by(state, year) |> 
+  mutate(
+    mean_data_value = mean(data_value)) |> 
+  select(year, state, mean_data_value) |> 
+  unique() |> 
+  ggplot(aes(x = year, y = mean_data_value, color = state)) +
+  geom_line() +
+  labs(y = "crude prevalence (%)", 
+       title = "Mean crude prevalence across year for each state") +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+brfss |> 
+  filter((year == 2006 | year == 2010) & state == "NY") |> 
+  ggplot(aes(x = response, y = data_value, color = response)) +
+  geom_boxplot() +
+  facet_grid(. ~ year) + 
+  labs(y = "crude prevalence (%)", title = "Crude prevalence vs. responses in NY State") +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+```
+
+Conclusion:
+The "spaghetti" plot displays the average crude prevalence of the "Excellent" response over time, with each line representing a different state. The plot reveals a relatively consistent crude prevalence from 2002 to 2010, indicating no substantial increase or decrease in this data value during that period.
+
+The boxplot illustrates the crude prevalence, referred to as `data_value`, for various responses ranging from "Poor" to "Excellent" in New York State for the years 2006 and 2010. In both years, the "Poor" response has the lowest crude prevalence, indicating fewer people reported their health as "Poor." The majority of respondents chose "Very good" or "Good" in both years. Notably, in 2010, a larger proportion of respondents selected "Very good" compared to 2006, suggesting a shift in health evaluations over time.
